large_exp_results/mythril/0xb022e08adc8ba2de6ba4fecb59c6d502f66e953b.sol/report
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

/tmp/0xb022e08adc8ba2de6ba4fecb59c6d502f66e953b.sol:84:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity =0.5.16;
^----------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.16"

